# Drax

./: Cargo.toml  README.md  justfile
drax/: Cargo.toml
drax/src/: error.rs  lib.rs  prelude.rs  transport.rs
drax/src/delegate/: map.rs  nbt.rs  option.rs  primitive.rs  referenced.rs  serde_json.rs  string.rs  vec.rs
examples/irc/: README.md
examples/irc/client/: Cargo.toml
examples/irc/common/: Cargo.toml
examples/irc/common/src/: lib.rs
examples/irc/server/: Cargo.toml
examples/irc/server/src/: main.rs
examples/pingpong/: Cargo.toml
examples/pingpong/src/: main.rs
src/: lib.rs  macros.rs  transport.rs
src/transport/: buffer.rs  packet.rs
src/transport/packet/: map.rs  vec.rs
