[workspace]
resolver = "2"
members = [
    "drax",
    "examples/pingpong",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Corey Shupe (corey@mail.fixed.codes)"]
description = "Simple abstraction layer over a protocol buffer, bringing dtos to regular types."
repository = "https://github.com/CoreyShupe/drax"
readme = "README.md"
license-file = "LICENSE"

[workspace.dependencies]
drax = { path = "drax" }
tokio = { version = "1.39.2", default-features = false }
